[gd_scene load_steps=3 format=3 uid="uid://d065ky5808xyd"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_trryi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6dwic"]
friction = 0.7
bounce = 0.05

[node name="Enemy" type="RigidBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 6
physics_material_override = SubResource("PhysicsMaterial_6dwic")
lock_rotation = true
script = ExtResource("1_trryi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true

[node name="DeathTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AITimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="DamageLabelTimer" type="Timer" parent="DamageLabel"]

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="AITimer" to="." method="_on_ai_timer_timeout"]
[connection signal="timeout" from="DamageLabel/DamageLabelTimer" to="." method="_on_damage_label_timer_timeout"]
